--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
   <h1>This is my heroku deployment!!!</h1>
   <h2>Hosting is my favorite ever!</h2>
+  <h2>New h2 tag</h2>
   <button>Don't Click Me</button>
   <script src="/js"></script>
 </body>
